# chordbro

./: .gitignore  README.md
packaging/mac-handoff/: MAC_BUILD_AND_INSTALLER_INSTRUCTIONS.md  package_mac.sh
packaging/windows/: ChordBro.iss  build-installer.ps1  factory-seeding.txt
ripchord-main/: CMakeLists.txt  README.md  Ripchord.jucer
ripchord-main/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp
ripchord-main/Source/Components/: ChordNameComponent.cpp  DeleteComponent.cpp  EditControlsComponent.cpp  KeyComponent.cpp  KeyboardViewComponent.cpp  KeyboardViewComponent.h  MainComponent.cpp  MainComponent.h  MenuComponent.cpp  MenuComponent.h  PlayControlsComponent.cpp  PlayControlsComponent.h  PresetComponent.cpp  PresetNameComponent.cpp  PresetViewComponent.cpp  PresetViewComponent.h  TagComponent.cpp
ripchord-main/Source/Messaging/: DataMessage.cpp  DataMessage.h  DataMessageListener.cpp  DataMessageListener.h  DataMessageManager.cpp
ripchord-main/Source/Modules/: FactoryPresets.h  Presets.h  Styles.h  System.h  Widgets.h
ripchord-main/Source/Process/: BrowserState.cpp  BrowserState.h  GlobalState.cpp  GlobalState.h  PresetState.cpp  PresetState.h
scripts/: build_windows_vst3.cmd  generate_premium_preset_packs.ps1
